# difffpdf

./: .gitattributes  .gitignore  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
.githooks/: prepare-commit-msg
pdfdiff/: __init__.py  chunk.py  cli.py  embed.py  extract.py  judge.py  match.py  pdf2md.py  pipeline.py  report.py  score.py  types.py
pdfdiff/pdfparse/: __init__.py  content.py  document.py  encodings.py  extract.py  filters.py  fonts.py  layout.py  lexer.py  markdown.py  objects.py
samples/: hard_pdf_v1.md  large_test_document_v1.md  largepdfs3_report.md
tests/: test_pdfparse.py  test_score.py
