[project]
name = "difffpdf"
version = "0.1.0"
description = "Semantic PDF comparison: how much does the content differ, by meaning."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Shubham Divakar", email = "shubham.divakar@gmail.com" },
]
keywords = ["pdf", "diff", "compare", "semantic", "similarity", "nlp", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    # Core pipeline — text extraction. Pure-wheel, installs everywhere.
    "pymupdf>=1.24",
    # Sentence splitting without a heavyweight NLP stack.
    "regex>=2024.0",
    # HTTP client for cloud/Ollama judge + embedding backends (no torch needed).
    "httpx>=0.27",
]

[project.optional-dependencies]
# Local embeddings + cross-encoder judge. Heavy (pulls torch). May lack
# wheels on bleeding-edge Python (e.g. 3.14) — use a 3.12 venv if so.
local = [
    "sentence-transformers>=3.0",
]
# OCR fallback for scanned/image-only pages.
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]
# Everything.
all = [
    "difffpdf[local,ocr]",
]
# Tooling for running the test suite.
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/shubhamdivakar/difffpdf"
Repository = "https://github.com/shubhamdivakar/difffpdf"
Issues = "https://github.com/shubhamdivakar/difffpdf/issues"

[project.scripts]
difffpdf = "pdfdiff.cli:main"
pdfdiff = "pdfdiff.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pdfdiff*"]
